--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     border-radius: 10px;
 }
 
+.btn.btn-outline-success:hover{
+    background-color: transparent !important;
+    border-color:transparent;
+}
+
 body{
     font-family: 'Epilogue';
 }
@@ -14,8 +19,9 @@ body{
     font-size: 30px;
 }
 
-.nav-item.dropdown a, .nav-item a{
+.nav-item.dropdown a, .nav-item a, .d-flex a, .d-flex button{
     color: #696969 !important;
     font-size: 13px;
     margin: 0 0 0 20px;
 }
+
