added the hero image and centered the body text

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
     border-radius: 10px;
 }
 
-.col p , .btn{
+.hero p , .btn{
     font-size: 18px;
     font-family: 'Epilogue';
 }
@@ -38,17 +38,23 @@ body{
     box-shadow: none !important;
 }
 
-.col h1{
-    font-size: 80px;
+.hero h1{
+    font-size: 70px;
     font-weight: 700;
     line-height: 70px;
     padding-bottom: 40px;
 }
 
-.col p{
+.hero p{
     padding-bottom: 30px;
+    color: #696969;
+    width: 480px;
 }
 
 .btn.bg-dark{
     border-radius: 10px;
+    font-size: 13px;
+    padding-left: 15px;
+    padding-right: 15px;
+
 }
