adjusted the design for the mobile view

--- a/style.css
+++ b/style.css
@@ -59,13 +59,7 @@ body{
     width: 480px;
 }
 
-.btn.bg-dark{
-    border-radius: 10px;
-    font-size: 13px;
-    padding-left: 15px;
-    padding-right: 15px;
 
-}
 
 
 .clients img{
@@ -73,4 +67,48 @@ body{
     padding-top: 100px;
     height: auto;
     width:100px;
+}
+
+
+.hero button.btn{
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    font-size: 13px;
+    padding-left: 15px;
+    padding-right: 15px;
+
+}
+
+.hero button.btn:hover{
+    color: black;
+    background-color: white;
+    border: 1px solid black;
+}
+
+@media only screen and (max-width:767px) {
+    .hero p{
+     width: 200%;
+     text-align: center;
+     margin-left: auto;
+    }
+
+    .hero h1{
+        /* font-size: 300%; */
+        text-align: center;
+        width: 200%;
+        
+    }
+
+    .hero button{
+      
+    }
+
+    .clients{
+        width: 200%;
+    }
+
+
+
+    
 }
